# LCD-Project-Manager

./: .gitignore  ABRIR CON ELECTRON.bat  COMPILAR EXE.bat  DEPLOY.md  DETENER APP.bat  INICIAR APP.bat  README.md  compile_clean.bat  electron-builder.yml  package-lock.json  package.json  render.yaml
apps/backend/: .env.example  nixpacks.toml  package.json
apps/backend/prisma/: schema.prisma  seed-real.ts  seed.ts
apps/backend/public/: .gitkeep
apps/backend/src/: app.module.ts  main.ts
apps/backend/src/activity/: activity.controller.ts  activity.service.ts
apps/backend/src/comments/: comments.controller.ts  comments.service.ts
apps/backend/src/common/: storage.ts  uploads.ts
apps/backend/src/docs/: docs.controller.ts  docs.service.ts
apps/backend/src/files/: files.controller.ts  files.service.ts
apps/backend/src/projects/: projects.controller.ts  projects.service.ts
apps/backend/src/search/: search.service.ts
apps/backend/src/tasks/: tasks.controller.ts  tasks.service.ts
apps/backend/src/users/: users.controller.ts  users.service.ts
apps/desktop/: electron-builder.yml  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/desktop/electron/: main.cjs  preload.cjs
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src/pages/: CalendarPage.tsx  DashboardPage.tsx  FilesPage.tsx  Models3DPage.tsx  ProjectDetailPage.tsx  ProjectsPage.tsx  SettingsPage.tsx
apps/desktop/src/stores/: appStore.ts  uiStore.ts
apps/desktop/src/styles/: globals.css
(+16 files in other folders)
